fix: height adjustment to help overflow work as intended

--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -1,7 +1,3 @@
-html {
-  overflow: auto !important;
-}
-
 body {
   color: #fff;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -10,5 +6,5 @@ body {
 
 #canvas {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 3px);
 }
